Z-index fix

--- a/src/components/banner-carousel/style.scss
+++ b/src/components/banner-carousel/style.scss
@@ -22,7 +22,7 @@
   .button {
     top: 45%;
     position: absolute;
-    z-index: 1000;
+    z-index: 10;
     box-shadow: 0 0 $spacer*2 $black;
     display: block !important;
 
